--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,14 @@
 {
+  "plugins": [
+    // ...
+    "react-hooks"
+  ],
   "extends": ["taro"],
   "rules": {
     "no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   },
     "parser": "@typescript-eslint/parser",
   "parserOptions": {
