--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tarojs/taro-weapp": "1.3.19",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
+    "react": "^16.10.2",
     "taro-ui": "^2.2.2"
   },
   "devDependencies": {
@@ -63,7 +64,7 @@
     "eslint-config-taro": "1.3.19",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-react-hooks": "^1.6.1",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "eslint-plugin-taro": "1.3.19",
     "stylelint": "9.3.0",
     "stylelint-config-taro-rn": "1.3.19",
