--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:quickapp": "npm run build:quickapp -- --watch",
-    "rebuild": "rm -rf dist & yarn build:weapp"
+    "rebuild": "rm -rf dist & yarn build:weapp",
+    "clear": "rm -rf dist"
   },
   "author": "",
   "license": "MIT",
