--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tarojs/taro-weapp": "1.3.19",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
+    "react": "^16.10.2",
     "taro-ui": "^2.2.2"
   },
   "devDependencies": {
