--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@tarojs/async-await": "^1.3.21",
     "@tarojs/components": "1.3.19",
     "@tarojs/router": "1.3.19",
     "@tarojs/taro": "1.3.19",
