[fix] 调整目录 增加appid 修改错误interface

--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "dist/",
 	"projectname": "jiaju",
 	"description": "jiajia_test",
-	"appid": "touristappid",
+	"appid": "wxf505491117b683ce",
 	"setting": {
 		"urlCheck": true,
 		"es6": false,
