--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	"dependencies": {
 		"@tarojs/async-await": "1.3.21",
 		"@tarojs/components": "1.3.21",
+		"@tarojs/redux": "^1.3.21",
+		"@tarojs/redux-h5": "^1.3.21",
 		"@tarojs/router": "1.3.21",
 		"@tarojs/taro": "1.3.21",
 		"@tarojs/taro-alipay": "1.3.21",
@@ -42,8 +44,12 @@
 		"@tarojs/taro-swan": "1.3.21",
 		"@tarojs/taro-tt": "1.3.21",
 		"@tarojs/taro-weapp": "1.3.21",
+		"dva-core": "^2.0.0",
+		"dva-loading": "^3.0.14",
 		"nerv-devtools": "^1.5.1",
 		"nervjs": "^1.5.1",
+		"redux": "^4.0.4",
+		"redux-logger": "^3.0.6",
 		"taro-ui": "^2.2.2"
 	},
 	"devDependencies": {
