--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
-    "@tarojs/plugin-babel": "1.3.19",
+    "@tarojs/plugin-babel": "^1.3.21",
     "@tarojs/plugin-csso": "1.3.19",
     "@tarojs/plugin-sass": "1.3.19",
-    "@tarojs/plugin-uglifyjs": "1.3.19",
+    "@tarojs/plugin-uglifyjs": "^1.3.21",
     "@tarojs/webpack-runner": "1.3.19",
     "@types/react": "^16.4.6",
     "@types/webpack-env": "^1.13.6",
