--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tarojs/taro-swan": "1.3.19",
     "@tarojs/taro-tt": "1.3.19",
     "@tarojs/taro-weapp": "1.3.19",
+    "axios": "^0.19.0",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "react": "^16.10.2",
