--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"dev:qq": "npm run build:qq -- --watch",
 		"dev:quickapp": "npm run build:quickapp -- --watch",
 		"rebuild": "rm -rf dist & yarn build:weapp",
-		"clear": "rm -rf dist"
+		"redev": "rm -rf dist & yarn dev:weapp"
 	},
 	"author": "",
 	"license": "MIT",
@@ -44,6 +44,7 @@
 		"@tarojs/taro-swan": "1.3.21",
 		"@tarojs/taro-tt": "1.3.21",
 		"@tarojs/taro-weapp": "1.3.21",
+		"dayjs": "^1.8.16",
 		"dva-core": "^2.0.0",
 		"dva-loading": "^3.0.14",
 		"nerv-devtools": "^1.5.1",
