--- a/package.json
+++ b/package.json
@@ -31,19 +31,21 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@tarojs/async-await": "1.3.21",
-		"@tarojs/components": "1.3.21",
-		"@tarojs/redux": "^1.3.21",
-		"@tarojs/redux-h5": "^1.3.21",
-		"@tarojs/router": "1.3.21",
-		"@tarojs/taro": "1.3.21",
-		"@tarojs/taro-alipay": "1.3.21",
-		"@tarojs/taro-h5": "1.3.21",
-		"@tarojs/taro-qq": "1.3.21",
-		"@tarojs/taro-quickapp": "1.3.21",
-		"@tarojs/taro-swan": "1.3.21",
-		"@tarojs/taro-tt": "1.3.21",
-		"@tarojs/taro-weapp": "1.3.21",
+		"@tarojs/cli": "2.0.0-beta.8",
+		"@tarojs/components": "2.0.0-beta.8",
+		"@tarojs/mini-runner": "^2.0.0-beta.8",
+		"@tarojs/redux": "^2.0.0-beta.8",
+		"@tarojs/redux-h5": "^2.0.0-beta.8",
+		"@tarojs/router": "2.0.0-beta.8",
+		"@tarojs/taro": "2.0.0-beta.8",
+		"@tarojs/taro-alipay": "2.0.0-beta.8",
+		"@tarojs/taro-h5": "2.0.0-beta.8",
+		"@tarojs/taro-qq": "2.0.0-beta.8",
+		"@tarojs/taro-quickapp": "2.0.0-beta.8",
+		"@tarojs/taro-swan": "2.0.0-beta.8",
+		"@tarojs/taro-tt": "2.0.0-beta.8",
+		"@tarojs/taro-weapp": "2.0.0-beta.8",
+		"babel-runtime": "^6.26.0",
 		"dayjs": "^1.8.16",
 		"dva-core": "^2.0.0",
 		"dva-loading": "^3.0.14",
@@ -55,11 +57,11 @@
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-free": "^5.11.2",
-		"@tarojs/plugin-babel": "1.3.21",
-		"@tarojs/plugin-csso": "1.3.21",
-		"@tarojs/plugin-sass": "1.3.21",
-		"@tarojs/plugin-uglifyjs": "1.3.21",
-		"@tarojs/webpack-runner": "1.3.21",
+		"@tarojs/plugin-babel": "2.0.0-beta.8",
+		"@tarojs/plugin-csso": "2.0.0-beta.8",
+		"@tarojs/plugin-sass": "2.0.0-beta.8",
+		"@tarojs/plugin-uglifyjs": "2.0.0-beta.8",
+		"@tarojs/webpack-runner": "2.0.0-beta.8",
 		"@types/react": "^16.4.6",
 		"@types/webpack-env": "^1.13.6",
 		"@typescript-eslint/parser": "^1.6.0",
@@ -68,16 +70,17 @@
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-plugin-transform-jsx-stylesheet": "^0.6.5",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
 		"babel-preset-env": "^1.6.1",
 		"eslint": "^5.16.0",
-		"eslint-config-taro": "1.3.21",
+		"eslint-config-taro": "2.0.0-beta.8",
 		"eslint-plugin-import": "^2.12.0",
 		"eslint-plugin-react": "^7.8.2",
 		"eslint-plugin-react-hooks": "^2.1.2",
-		"eslint-plugin-taro": "1.3.21",
+		"eslint-plugin-taro": "2.0.0-beta.8",
 		"stylelint": "9.3.0",
-		"stylelint-config-taro-rn": "1.3.21",
-		"stylelint-taro-rn": "1.3.21",
+		"stylelint-config-taro-rn": "2.0.0-beta.8",
+		"stylelint-taro-rn": "2.0.0-beta.8",
 		"typescript": "^3.0.1"
 	}
 }
