--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "resolveJsonModule": true,
     "typeRoots": [
       "node_modules/@types",
-      "global.d.ts"
+      "global.d.ts",
+      "typings"
     ]
   },
   "exclude": [
